GNU idutils NEWS                                      -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  lid is no longer susceptible to a buffer overrun


* Noteworthy changes in release 4.6 (2012-02-03) [stable]

** Bug fixes

  lid -L no longer mishandles open-ended ranges like "..2" and "2.."

  lid's -d, -o and -x options now work properly


* Noteworthy changes in release 4.5 (2010-06-17) [stable]


* Noteworthy changes in release 4.4 (2009-10-30) [beta]

** New features

  mkid and xtokid accept a new option --files0-from=FILE, to make them
  process only the files named in FILE.  FILE must contain a list of
  NUL-terminated file names.

** Bug fixes

  mkid and xtokid now accept language specific options via the command line.


* Noteworthy changes in release 4.3.92 (2008-10-18) [beta]

** Bug fixes

  fid: avoid a buffer overrun
  handle failed allocation, e.g., by strdup
  avoid potential realloc overflow
  mkid: avoid an infloop on some .el files
  all programs: detect write error on stdout

** Miscellaneous improvements

  revamp code and infrastructure, bringing it closer to coreutils' standards
  add automatically-generated man pages
  mkid recognize more suffixes: .ac, .mk, .bz2, .lzma.
  idutils is now licensed under the General Public License version 3
    or later (GPLv3+).


Version 4.2 - August 5, 2006, by Claudio Fontana

* Bugfix release

Version 4.1 - March 12, 2006, by Claudio Fontana

* new project name: idutils (change from id-utils)
* fixed many portability issues
* support for java and lisp

Version 4.0 - Nov 1, 2005, by Claudio Fontana

* Modernize build system (autotools, gnulib, intl, large file support)
* Cleaned up some code
* Fixed some portability problems (some might remain)
* Integrated perl support

Version 3.2d - April 6, 1999, by Greg McGary

* Modernize lisp/Makefile.am, replace gets with fgets.

* Allocate larger scanner buffer: MIN (2MB, largest file)
